WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181554
FormDataElement::lengthInBytes should use ThreadableBlobRegistry
https://bugs.webkit.org/show_bug.cgi?id=181554
Summary
FormDataElement::lengthInBytes should use ThreadableBlobRegistry
youenn fablet
Reported
2018-01-11 13:20:16 PST
This is used by Cache API which is exposed to workers.
Attachments
Patch
(1.39 KB, patch)
2018-01-11 13:23 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Adding test
(10.76 KB, patch)
2018-01-12 09:45 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-01-11 13:23:20 PST
Created
attachment 331107
[details]
Patch
Chris Dumez
Comment 2
2018-01-12 09:03:24 PST
Comment on
attachment 331107
[details]
Patch Why don't we hit the isMainThread() assertion in blobRegistry() if this is an issue? At the very least, this looks testable.
youenn fablet
Comment 3
2018-01-12 09:45:43 PST
Created
attachment 331209
[details]
Adding test
WebKit Commit Bot
Comment 4
2018-01-12 12:42:00 PST
Comment on
attachment 331209
[details]
Adding test Clearing flags on attachment: 331209 Committed
r226906
: <
https://trac.webkit.org/changeset/226906
>
WebKit Commit Bot
Comment 5
2018-01-12 12:42:01 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-01-12 12:42:33 PST
<
rdar://problem/36479493
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug