FormDataElement::lengthInBytes should use ThreadableBlobRegistry https://bugs.webkit.org/show_bug.cgi?id=181554

Patch by Youenn Fablet <youenn@apple.com> on 2018-01-12
Reviewed by Chris Dumez.

Source/WebCore:

Covered by updated test.

Fix blobRegistry() use and add support for creating a response that may trigger the issue.

* platform/network/FormData.cpp:
(WebCore::FormDataElement::lengthInBytes const): Was using directly blobRegistry() while ThreadableBlobRegistry is more appropriate
in case this is called from workers.
* Modules/fetch/FetchBody.h:
* Modules/fetch/FetchResponse.h:
* fileapi/Blob.h:
* testing/ServiceWorkerInternals.cpp:
(WebCore::ServiceWorkerInternals::createOpaqueWithBlobBodyResponse):
* testing/ServiceWorkerInternals.h:
* testing/ServiceWorkerInternals.idl:

LayoutTests:

* http/tests/workers/service/resources/service-worker-cache-api-worker.js:
(async):
(event.event.request.url.indexOf): Deleted.
(event.event.request.url.endsWith): Deleted.
(event.event.respondWith.promise.then): Deleted.
* http/tests/workers/service/service-worker-cache-api.https-expected.txt:
* http/tests/workers/service/service-worker-cache-api.https.html:

Canonical link: https://commits.webkit.org/197465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226906 268f45cc-cd09-0410-ab3c-d52691b4dbfc